sonarbugs fix (#5637)