@@ -13,7 +13,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.ytelsefordeling.periode.OppgittPeriodeBuilder;
@@ -38,15 +37,17 @@ class MorsJustering implements ForelderFødselJustering {
         oppgittePerioder = fyllHull(oppgittePerioder);
         var ikkeFlyttbarePerioder = ikkeFlyttbarePerioder(oppgittePerioder);
         var hullPåSluttenAvTidsperiodeForbeholdtMor = ikkeFlyttbarePerioder.stream()
-            .filter(p -> p instanceof JusterPeriodeHull)
+            .filter(JusterPeriodeHull.class::isInstance)
             .filter(p -> tilOgMed(gammelFamiliehendelse.plusDays(1)).isEqual(p.getFom()))
             .findFirst();
         var virkedagerSomSkalSkyves = beregnAntallLedigeVirkedager(gammelFamiliehendelse, nyFamiliehendelse, ikkeFlyttbarePerioder);
 
         List<OppgittPeriodeEntitet> justertePerioder = new ArrayList<>();
         for (var oppgittPeriode : oppgittePerioder) {
-            var virkedagerSomSkalSkyvePeriode = hullPåSluttenAvTidsperiodeForbeholdtMor.map(p -> oppgittPeriode.getTom().isBefore(p.getFom())).orElse(true)
-                ? virkedagerSomSkalSkyves : virkedagerSomSkalSkyves - Virkedager.beregnAntallVirkedager(hullPåSluttenAvTidsperiodeForbeholdtMor.get().getFom(), hullPåSluttenAvTidsperiodeForbeholdtMor.get().getTom());
+            var virkedagerSomSkalSkyvePeriode = hullPåSluttenAvTidsperiodeForbeholdtMor
+                .filter(hull -> !oppgittPeriode.getTom().isBefore(hull.getFom()))
+                .map(hull -> virkedagerSomSkalSkyves - Virkedager.beregnAntallVirkedager(hull.getFom(), hull.getTom()))
+                .orElse(virkedagerSomSkalSkyves);
             var justert = flyttPeriodeTilHøyre(oppgittPeriode, virkedagerSomSkalSkyvePeriode, ikkeFlyttbarePerioder);
             justertePerioder.addAll(justert);
         }
@@ -79,7 +80,7 @@ class MorsJustering implements ForelderFødselJustering {
     }
 
     private static List<OppgittPeriodeEntitet> fjernHullPerioder(List<OppgittPeriodeEntitet> oppgittPerioder) {
-        return oppgittPerioder.stream().filter(p -> !(p instanceof JusterPeriodeHull)).collect(Collectors.toList());
+        return oppgittPerioder.stream().filter(p -> !(p instanceof JusterPeriodeHull)).toList();
     }
 
     private List<OppgittPeriodeEntitet> fyllHull(List<OppgittPeriodeEntitet> oppgittePerioder) {
@@ -182,7 +183,7 @@ class MorsJustering implements ForelderFødselJustering {
 
     private OppgittPeriodeEntitet sisteFlyttbarePeriode(List<OppgittPeriodeEntitet> resultat) {
         var flyttbarePerioder = flyttbarePerioder(resultat);
-        if (flyttbarePerioder.size() == 0) {
+        if (flyttbarePerioder.isEmpty()) {
             throw new IllegalStateException("Forventer minst en flyttbar periode før hull");
         }
         return flyttbarePerioder.get(flyttbarePerioder.size() - 1);
@@ -194,7 +195,7 @@ class MorsJustering implements ForelderFødselJustering {
     }
 
     private List<OppgittPeriodeEntitet> flyttbarePerioder(List<OppgittPeriodeEntitet> perioder) {
-        return perioder.stream().filter(this::erPeriodeFlyttbar).collect(Collectors.toList());
+        return perioder.stream().filter(this::erPeriodeFlyttbar).toList();
     }
 
     private int beregnAntallLedigeVirkedager(LocalDate dato1, LocalDate dato2, List<OppgittPeriodeEntitet> ikkeFlyttbarePerioder) {
@@ -322,7 +323,7 @@ class MorsJustering implements ForelderFødselJustering {
     }
 
     private List<OppgittPeriodeEntitet> ikkeFlyttbarePerioder(List<OppgittPeriodeEntitet> oppgittePerioder) {
-        return oppgittePerioder.stream().filter(periode -> !erPeriodeFlyttbar(periode)).collect(Collectors.toList());
+        return oppgittePerioder.stream().filter(periode -> !erPeriodeFlyttbar(periode)).toList();
     }
 
     private List<OppgittPeriodeEntitet> hullPerioder(List<OppgittPeriodeEntitet> oppgittePerioder) {
@@ -357,7 +358,7 @@ class MorsJustering implements ForelderFødselJustering {
                 return OppgittPeriodeBuilder.fraEksisterende(p).medPeriode(p.getFom(), sisteSøkteDato).build();
             }
             return p;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 
@@ -409,5 +410,7 @@ class MorsJustering implements ForelderFødselJustering {
         public LocalDate getTom() {
             return tom;
         }
+
+
     }
 }
