@@ -5,20 +5,18 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import no.nav.foreldrepenger.behandlingslager.behandling.opptjening.OpptjeningAktivitetType;
-import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagEntitet;
+import no.nav.foreldrepenger.domene.modell.BGAndelArbeidsforhold;
 import no.nav.foreldrepenger.domene.modell.Beregningsgrunnlag;
+import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagAktivitetStatus;
 import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagGrunnlag;
+import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagPeriode;
+import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagPrStatusOgAndel;
 import no.nav.foreldrepenger.domene.modell.FaktaAggregat;
 import no.nav.foreldrepenger.domene.modell.FaktaAktør;
 import no.nav.foreldrepenger.domene.modell.kodeverk.AktivitetStatus;
 import no.nav.foreldrepenger.domene.modell.kodeverk.AndelKilde;
-import no.nav.foreldrepenger.domene.modell.BGAndelArbeidsforhold;
-import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagAktivitetStatus;
-import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagPeriode;
-import no.nav.foreldrepenger.domene.modell.BeregningsgrunnlagPrStatusOgAndel;
 import no.nav.foreldrepenger.domene.modell.kodeverk.Hjemmel;
 import no.nav.foreldrepenger.domene.modell.kodeverk.PeriodeÅrsak;
 import no.nav.foreldrepenger.domene.modell.typer.FaktaVurdering;
@@ -43,10 +41,10 @@ public class BeregningsgrunnlagFormidlingV2DtoTjeneste {
     public Optional<BeregningsgrunnlagDto> map() {
         var bgPerioder = grunnlag.getBeregningsgrunnlag()
             .map(Beregningsgrunnlag::getBeregningsgrunnlagPerioder)
-            .orElse(Collections.emptyList())
+            .orElse(List.of())
             .stream()
             .map(this::mapPeriode)
-            .collect(Collectors.toList());
+            .toList();
         return grunnlag.getBeregningsgrunnlag().map(bg -> new BeregningsgrunnlagDto(mapAktivitetstatuser(bg.getAktivitetStatuser()),
             mapHjemmelTilDto(bg.getHjemmel()),
             bg.getGrunnbeløp().getVerdi(),
@@ -93,7 +91,7 @@ public class BeregningsgrunnlagFormidlingV2DtoTjeneste {
         return aktivitetStatuser.stream()
             .map(BeregningsgrunnlagAktivitetStatus::getAktivitetStatus)
             .map(this::mapAktivitetStatusTilDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private AktivitetStatusDto mapAktivitetStatusTilDto(AktivitetStatus aktivitetStatus) {
@@ -112,14 +110,14 @@ public class BeregningsgrunnlagFormidlingV2DtoTjeneste {
             case KUN_YTELSE -> AktivitetStatusDto.KUN_YTELSE;
             case TTLSTØTENDE_YTELSE -> AktivitetStatusDto.TTLSTØTENDE_YTELSE;
             case VENTELØNN_VARTPENGER -> AktivitetStatusDto.VENTELØNN_VARTPENGER;
-            case UDEFINERT -> null;
+            case UDEFINERT -> throw new IllegalArgumentException("AKtivitetStatus udefinert");
         };
     }
 
     private BeregningsgrunnlagPeriodeDto mapPeriode(BeregningsgrunnlagPeriode bgPeriode) {
         var andeler = bgPeriode.getBeregningsgrunnlagPrStatusOgAndelList().stream()
             .map(this::mapAndel)
-            .collect(Collectors.toList());
+            .toList();
         var bruttoInkludertBortfaltNaturalytelsePrAar = bgPeriode.getBeregningsgrunnlagPrStatusOgAndelList().stream()
             .map(BeregningsgrunnlagPrStatusOgAndel::getBruttoInkludertNaturalYtelser)
             .filter(Objects::nonNull)
@@ -167,8 +165,8 @@ public class BeregningsgrunnlagFormidlingV2DtoTjeneste {
     private BeregningsgrunnlagAndelDto mapAndel(BeregningsgrunnlagPrStatusOgAndel andel) {
         var faktaVurdering = finnFaktaavklaringForGrunnlag().map(FaktaAktør::getErNyIArbeidslivetSN);
         var arbeidsforholdDto = andel.getBgAndelArbeidsforhold().map(this::mapArbeidsforhold);
-        return new BeregningsgrunnlagAndelDto(andel.getDagsats(),
-            mapAktivitetStatusTilDto(andel.getAktivitetStatus()),
+        var aktivitetStatus = mapAktivitetStatusTilDto(andel.getAktivitetStatus());
+        return new BeregningsgrunnlagAndelDto(andel.getDagsats(), aktivitetStatus,
             andel.getBruttoPrÅr(), andel.getAvkortetPrÅr(),
             faktaVurdering.map(FaktaVurdering::getVurdering).orElse(null),
             mapOpptjeningAktivitetsTypeTilDto(andel.getArbeidsforholdType()),
@@ -181,7 +179,6 @@ public class BeregningsgrunnlagFormidlingV2DtoTjeneste {
     private Optional<FaktaAktør> finnFaktaavklaringForGrunnlag() {
         return grunnlag.getFaktaAggregat().flatMap(FaktaAggregat::getFaktaAktør);
     }
-
 
     private OpptjeningAktivitetDto mapOpptjeningAktivitetsTypeTilDto(OpptjeningAktivitetType arbeidsforholdType) {
         return switch (arbeidsforholdType) {
